completed the app with multithreading and notification and audio feedback